# pandas-addons

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/actions/: poetry.yaml
.github/workflows/: install.yml  tests.yml
integrations/addons/: concat_test.py  extract_test.py  map_test.py  to_csv_test.py
pandas_addons/: __init__.py  register.py  testing.py
pandas_addons/addons/: __init__.py  assert_.py  concat.py  extract.py  map.py  to_csv.py
tests/: __init__test.py  register_test.py  testing_test.py
tests/addons/: assert_test.py  concat_test.py  extract_test.py  map_test.py  to_csv_test.py
