[tool.poetry]
name = "pandas-addons"
version = "0.1.0"
description = "Extending pandas with new accessors"
authors = ["Clement Walter <clement0walter@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=0.25"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pytest = "^6.1.2"
pre-commit = "^2.9.3"
pytest-cov = "^2.10.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov-report xml:codecov.xml --cov pandas_addons"
testpaths = [
    "tests",
]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | venv
  | \.virtualenvs
)/
'''

[tool.isort]
profile = "black"
src_paths = ["pandas_addons"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
